--- a/src/pages/Home/homePage.scss
+++ b/src/pages/Home/homePage.scss
@@ -142,7 +142,21 @@ $silver-color: #595959;
     font-weight: 600;
     font-size: 32px;
     line-height: 40px;
-    margin-left: 15px;
+    
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px; 
+
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      margin-right: 5px;
+      vertical-align: middle;
+      background-color: $orange-color;
+    }
   }
 
   &-price {
@@ -157,14 +171,7 @@ $silver-color: #595959;
   }
 }
 
-.orange-mark {
-  width: 12px;
-  height: 8px;
-  color: $orange-color;
-  margin-top: 5px;
-  margin-left: -15px;
-  font-size: 18px;
-}
+
 
 .catalog-title {
   @include title-black();
