--- a/src/pages/Home/homePage.scss
+++ b/src/pages/Home/homePage.scss
@@ -97,11 +97,10 @@ $line-gray-color: #ededed;
     left: 220px;
     top: 290px;
     border-radius: nullpx;
-    
 
     &:after {
       content: ".";
-      color: $orange-color
+      color: $orange-color;
     }
   }
 
@@ -187,114 +186,123 @@ $line-gray-color: #ededed;
   margin-bottom: 40px;
   &:after {
     content: ".";
-    color: $orange-color
-  }
-}
-
-.diferencial-container {
-  @include centering();
-  height: 960px;
-  width: 1600px;
-  background-color: $black-color;
-  margin-bottom: 200px;
-  display: flex;
-}
-
-.diferencial-text-container {
-  margin-left: 220px;
-  margin-top: 80px;
-  margin-right: 66px;
-}
-
-.diferencial-text {
-  &-title {
-    color: $light-gray-color;
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 24px;
-    letter-spacing: 0.015em;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-  }
-
-  &-subtitle {
-    width: 549px;
-    height: 216px;
-    left: 220px;
-    top: 2072px;
-    margin-bottom: 20px;
-
-    @include title-white();
-    &:after {
-      content: ".";
-      color: $orange-color
-    }
-  }
-
-  &-content {
-    margin-bottom: 20px;
-    width: 534px;
-    height: 180px;
-
-    @include description();
-  }
-
-  &-button {
     color: $orange-color;
-
-    font-family: "Poppins";
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 36px;
   }
+}
 
-  &-button-underline {
-    width: 261px;
-    height: 4px;
-    left: 220px;
-    top: 2544px;
-    background-color: $orange-color;
-    margin-bottom: 81px;
-  }
-
-  &-footer-container {
+.diferencial {
+  &-container {
+    @include centering();
+    height: 960px;
+    width: 1600px;
+    background-color: $black-color;
+    margin-bottom: 200px;
     display: flex;
   }
 
-  &-first {
-    margin-right: 40px;
+  &-dec {
+    height: 52px;
+    width: 52px;
+    margin-left: 40px;
+    margin-bottom: 40px;
+    margin-top: 868px;
   }
 
-  &-footer-title {
-    font-family: Poppins;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 36px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-bottom: 8px;
+  &-text-container {
+    margin-left: 128px;
+    margin-top: 80px;
+    margin-right: 66px;
   }
 
-  &-footer-content {
-    font-family: "Roboto";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    width: 239px;
-    height: 116px;
-    color: $light-gray-color;
-  }
-}
+  &-text {
+    &-title {
+      color: $light-gray-color;
+      font-family: "Roboto";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 24px;
+      letter-spacing: 0.015em;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
 
-.diferencial-img {
-  height: 1120px;
-  width: 700px;
-  border-radius: 0px;
-  margin-top: -80px;
+    &-subtitle {
+      width: 549px;
+      height: 216px;
+      left: 220px;
+      top: 2072px;
+      margin-bottom: 20px;
+
+      @include title-white();
+      &:after {
+        content: ".";
+        color: $orange-color;
+      }
+    }
+
+    &-content {
+      margin-bottom: 20px;
+      width: 534px;
+      height: 180px;
+
+      @include description();
+    }
+
+    &-button {
+      color: $orange-color;
+
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 36px;
+    }
+
+    &-button-underline {
+      width: 261px;
+      height: 4px;
+      left: 220px;
+      top: 2544px;
+      background-color: $orange-color;
+      margin-bottom: 81px;
+    }
+
+    &-footer-container {
+      display: flex;
+    }
+
+    &-first {
+      margin-right: 40px;
+    }
+
+    &-footer-title {
+      font-family: Poppins;
+      font-size: 24px;
+      font-weight: 500;
+      line-height: 36px;
+      letter-spacing: 0em;
+      text-align: left;
+      margin-bottom: 8px;
+    }
+
+    &-footer-content {
+      font-family: "Roboto";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 24px;
+      width: 239px;
+      height: 116px;
+      color: $light-gray-color;
+    }
+  }
+  &-img {
+    height: 1120px;
+    width: 700px;
+    border-radius: 0px;
+    margin-top: -80px;
+  }
 }
 
 .partners-title {
@@ -304,7 +312,7 @@ $line-gray-color: #ededed;
   margin-left: 220px;
   &:after {
     content: ".";
-    color: $orange-color
+    color: $orange-color;
   }
 }
 .partners-img-container {
@@ -314,6 +322,7 @@ $line-gray-color: #ededed;
 .partners-container {
   display: flex;
   flex-direction: column;
+  margin-bottom: 120px;
 }
 .partners-row {
   display: flex;
@@ -364,6 +373,97 @@ $line-gray-color: #ededed;
     border-left: 2px solid $line-gray-color;
     &-top {
       padding-left: 55px;
+    }
+  }
+}
+
+.response {
+  &-container {
+    display: flex;
+    height: 680px;
+    width: 1597px;
+    background-color: $orange-color;
+  }
+
+  &-content-container {
+    position: relative;
+  }
+
+  &-text {
+    display: flex;
+    margin: 204px 0 0 40px;
+  }
+  &-img {
+    height: 680px;
+    width: 779.54px;
+  }
+
+  &-dec-first {
+    transform: rotate(180deg);
+    transform: scaleY(-1);
+    opacity: 0.2;
+    margin: 40px 0 0 40px;
+    width: 52px;
+    height: 52px;
+  }
+
+  &-dec-second {
+    transform: rotate(270deg);
+    opacity: 0.2;
+    position: absolute;
+    left: 710px;
+    bottom: 40px;
+    width: 52px;
+    height: 52px;
+  }
+
+  &-text-container {
+    height: 240px;
+    width: 505.05px;
+    font-family: "Merriweather";
+    font-style: italic;
+    font-weight: 900;
+    font-size: 36px;
+    line-height: 48px;
+    color: #332200;
+  }
+  &-text-mark-second {
+    transform: rotate(180deg);
+    margin-left: -65px;
+  }
+  &-author {
+    position: absolute;
+    bottom: 90px;
+    left: 80px;
+
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 32px;
+    color: #a66f00;
+  }
+}
+
+.support {
+  &-container {
+   
+   
+    width: 1600px;
+    height: 796px;
+ 
+    
+
+    background: #121212;
+  }
+  &-title {
+    @include title-white();
+    text-transform: lowercase;
+    margin: 60px 1103.07px 60px 217.41px;
+
+    &:after {
+      content: ".";
+      color: $orange-color;
     }
   }
 }
