--- a/src/pages/Home/homePage.scss
+++ b/src/pages/Home/homePage.scss
@@ -447,23 +447,207 @@ $line-gray-color: #ededed;
 
 .support {
   &-container {
-   
-   
     width: 1600px;
     height: 796px;
- 
-    
-
     background: #121212;
   }
   &-title {
     @include title-white();
     text-transform: lowercase;
-    margin: 60px 1103.07px 60px 217.41px;
+    margin: 0px 1103.07px 60px 217.41px;
+    padding-top: 60px;
 
     &:after {
       content: ".";
       color: $orange-color;
     }
+  }
+  &-options {
+    display: flex;
+  }
+
+  &-silver {
+    &-container {
+      display: flex;
+      height: 396px;
+      width: 561.05px;
+      margin-top: 104px;
+      margin-left: 216.41px;
+      background-color: $black-color;
+    }
+
+    &-title {
+      margin-top: 20px;
+      margin-left: 64.12px;
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 36px;
+      line-height: 48px;
+
+      color: #9c9c9c;
+    }
+    &-ul {
+      list-style-type: none;
+      font-family: "Roboto";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 24px;
+      li {
+        position: relative;
+        padding-left: 20px;
+        margin-bottom: 20px;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 16px;
+          height: 16px;
+          background-image: url("./imgHome/Vector.png");
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+      }
+    }
+    &-button {
+      text-decoration: none;
+      color: #cccccc;
+      margin: 32px 0 0 60px;
+
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 24px;
+
+      border-radius: 5px;
+      padding: 16px 32px 16px 32px;
+
+      text-transform: uppercase;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      gap: 10px;
+      width: 185px;
+      height: 56px;
+
+      background: #121212;
+      border-radius: 5px;
+    }
+    &-prise {
+      color: $white-color;
+      margin: 20px 32px 0 100px;
+      width: 114.21px;
+      height: 48px;
+
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 36px;
+      line-height: 48px;
+    }
+  }
+
+  &-gold-container {
+    height: 484px;
+    width: 561.05px;
+    margin-top: 60px;
+    margin-left: 41.08px;
+    background-color: $black-color;
+  }
+  &-termos {
+    text-decoration: none;
+    width: 46.09px;
+    height: 16px;
+    margin-left: 165px;
+
+    font-family: "Poppins";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+
+    color: #9c9c9c;
+  }
+
+  &-gold {
+    &-container{
+      display: flex;
+    }
+    &-title {
+      color: $orange-color;
+      margin: 20px 0 0 64.12px;
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 36px;
+      line-height: 48px;
+    }
+    &-button {
+      text-decoration: none;
+      color: $black-color;
+      margin: 32px 0 0 60px;
+
+      font-family: "Poppins";
+      font-style: normal;
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 24px;
+
+      border-radius: 5px;
+      padding: 16px 32px 16px 32px;
+
+      text-transform: uppercase;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      gap: 10px;
+      width: 185px;
+      height: 56px;
+
+      background: $orange-color;
+      border-radius: 5px;
+    }
+    &-ul {
+      list-style-type: none;
+      font-family: "Roboto";
+      font-style: normal;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 24px;
+      li {
+        position: relative;
+        padding-left: 20px;
+        margin-bottom: 20px;
+        &::before {
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 16px;
+          height: 16px;
+          background-image: url("./imgHome/Vector.png");
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+      }
+    }
+    &-prise {
+      width: 121.23px;
+      height: 48px;
+      font-family: 'Poppins';
+      font-style: normal;
+      font-weight: 600;
+      font-size: 36px;
+      line-height: 48px;
+      margin: 20px 32.06px 0 95px;
+    }
+    
   }
 }
