create different files for styles and getting started with the Bicicletas page

--- a/src/pages/Home/homePage.scss
+++ b/src/pages/Home/homePage.scss
@@ -1,71 +1,5 @@
-$black-color: #000000;
-$white-color: #ffffff;
-$orange-color: #ffbb00;
-$light-gray-color: #b3b3b3;
-$dark-gray-color: #595959;
-$line-gray-color: #ededed;
-
-@mixin centering() {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-@mixin title-white() {
-  font-family: Poppins;
-  font-size: 64px;
-  font-weight: 600;
-  line-height: 72px;
-  letter-spacing: 0em;
-  text-align: left;
-}
-
-@mixin title-black() {
-  font-family: Poppins;
-  font-size: 64px;
-  font-weight: 600;
-  line-height: 72px;
-  letter-spacing: 0em;
-  text-align: left;
-}
-
-@mixin description() {
-  letter-spacing: 0em;
-  text-align: left;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400px;
-  font-size: 24px;
-  line-height: 36px;
-
-  color: $light-gray-color;
-}
-
-@mixin button() {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 16px 32px;
-  gap: 10px;
-
-  background: linear-gradient(180deg, #ffbb00 0%, #f2a60c 100%);
-  border-radius: 5px;
-  font-family: "Poppins";
-
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 24px;
-
-  text-transform: uppercase;
-
-  color: #332200;
-
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-}
-
+@import "../../components/styles/variables.scss";
+@import "../../components/styles/mixins.scss";
 .home-container {
   @include centering();
   height: 680px;
@@ -657,105 +591,4 @@ $line-gray-color: #ededed;
   }
 }
 
-.footer {
-  &-container {
-    height: 492px;
-    width: 1600px;
-    background-color: $black-color;
-    display: flex;
-    justify-content: space-between;
-  }
-  &-bikcraft {
-    text-decoration: none;
-    color: $white-color;
-    font-family: Poppins;
-    font-size: 34px;
-    font-weight: 600;
-    line-height: 72px;
-    letter-spacing: 0em;
-    text-align: left;
-    margin-top: 40px;
-    margin-left: 122px;
-  }
-  &-info-title {
-    font-family: Roboto;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 32px;
-    letter-spacing: 0.015em;
-    text-align: left;
-    margin-top: 60px;
-    margin-bottom: 32px;
-    text-transform: uppercase;
-  }
-  &-info-ul {
-    li {
-      list-style-type: none;
-      margin-left: -40px;
-    }
-    color: $light-gray-color;
-    font-family: Roboto;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 32px;
-    letter-spacing: 0.015em;
-    text-align: left;
 
-    font-family: Roboto;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 32px;
-    letter-spacing: 0.015em;
-    text-align: left;
-  }
-  &-info-icon-container {
-    display: flex;
-    column-gap: 32px;
-  }
-
-  &-link {
-    &-container {
-      position: relative;
-      left: 100px;
-    }
-    &-title {
-      font-family: "Roboto";
-      font-style: normal;
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 32px;
-      margin-top: 60px;
-      margin-bottom: 32px;
-      letter-spacing: 0.015em;
-      text-transform: uppercase;
-    }
-    &-list {
-      display: flex;
-      flex-direction: column;
-    }
-    &-item {
-      font-family: Poppins;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 36px;
-      letter-spacing: 0.015em;
-      text-align: left;
-
-      text-decoration: none;
-      color: $light-gray-color;
-      margin-top: 0;
-    }
-  }
-  &-description {
-    position: relative;
-    top: 430px;
-    right: 1150px;
-    font-family: Roboto;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 32px;
-    letter-spacing: 0.015em;
-    text-align: left;
-    color: $dark-gray-color;
-  }
-}
