--- a/src/pages/Bicicletas/bicicletasPage.scss
+++ b/src/pages/Bicicletas/bicicletasPage.scss
@@ -4,16 +4,16 @@
 .header {
   &-container {
     @include centering();
-    background-color: #121212;
+    background-color: $black-color;
     height: 223px;
-    width: 1600px;
+    width: 100%;
   }
   &-smal-text {
     font-family: Poppins;
     font-size: 24px;
     font-weight: 500;
     line-height: 23px;
-    letter-spacing: 0em;
+ 
     text-align: left;
     color: $light-gray-color;
 
