--- a/src/pages/Home/homePage.scss
+++ b/src/pages/Home/homePage.scss
@@ -2,8 +2,12 @@
 @import "../../components/styles/mixins.scss";
 .home-container {
   @include centering();
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   height: 680px;
-  width: 1600px;
+  width: 100%;
   background-color: $black-color;
   color: $white-color;
 }
@@ -45,18 +49,17 @@
     left: 220px;
     top: 470px;
     margin-top: 36px;
-    margin-bottom: 36px;
   }
 
   &-button {
     @include button();
+    margin-top: 36px;
   }
 }
 
 .catalog-container {
   height: 734px;
   width: 1460px;
-  margin-bottom: 200px;
 }
 
 .catalog-cards {
@@ -68,6 +71,7 @@
 
 .catalog-card {
   &-img {
+    margin-top: 40px;
     height: 520px;
     width: 460px;
     border-radius: 5px;
@@ -117,7 +121,6 @@
   margin-left: 205px;
   margin-top: 114px;
   border-radius: nullpx;
-  margin-bottom: 40px;
   &:after {
     content: ".";
     color: $orange-color;
@@ -126,12 +129,14 @@
 
 .diferencial {
   &-container {
-    @include centering();
     height: 960px;
-    width: 1600px;
+    margin-top: 300px;
+
     background-color: $black-color;
-    margin-bottom: 200px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   &-dec {
@@ -158,15 +163,12 @@
       line-height: 24px;
       letter-spacing: 0.015em;
       text-transform: uppercase;
-      margin-bottom: 20px;
     }
 
     &-subtitle {
       width: 549px;
       height: 216px;
-      left: 220px;
-      top: 2072px;
-      margin-bottom: 20px;
+      margin-top: 20px;
 
       @include title-white();
       &:after {
@@ -176,7 +178,7 @@
     }
 
     &-content {
-      margin-bottom: 20px;
+      margin-top: 20px;
       width: 534px;
       height: 180px;
 
@@ -185,7 +187,7 @@
 
     &-button {
       color: $orange-color;
-
+      margin-top: 40px;
       font-family: "Poppins";
       font-style: normal;
       font-weight: 600;
@@ -199,10 +201,10 @@
       left: 220px;
       top: 2544px;
       background-color: $orange-color;
-      margin-bottom: 81px;
     }
 
     &-footer-container {
+      margin-top: 81px;
       display: flex;
     }
 
@@ -217,10 +219,11 @@
       line-height: 36px;
       letter-spacing: 0em;
       text-align: left;
-      margin-bottom: 8px;
+    
     }
 
     &-footer-content {
+      margin-top: 8px;
       font-family: "Roboto";
       font-style: normal;
       font-weight: 400;
@@ -244,6 +247,7 @@
   color: $black-color;
   text-transform: lowercase;
   margin-left: 220px;
+  margin-top: 200px;
   &:after {
     content: ".";
     color: $orange-color;
@@ -256,10 +260,12 @@
 .partners-container {
   display: flex;
   flex-direction: column;
-  margin-bottom: 120px;
+
 }
 .partners-row {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   div {
     width: 348px;
@@ -313,9 +319,12 @@
 
 .response {
   &-container {
+    margin-top: 100px;
     display: flex;
-    height: 680px;
-    width: 1597px;
+    justify-content: center;
+
+    width: 100%;
+    height: auto;
     background-color: $orange-color;
   }
 
@@ -327,6 +336,7 @@
     display: flex;
     margin: 204px 0 0 40px;
   }
+
   &-img {
     height: 680px;
     width: 779.54px;
@@ -336,7 +346,7 @@
     transform: rotate(180deg);
     transform: scaleY(-1);
     opacity: 0.2;
-    margin: 40px 0 0 40px;
+    margin: 10px 0 0 10px;
     width: 52px;
     height: 52px;
   }
@@ -344,16 +354,16 @@
   &-dec-second {
     transform: rotate(270deg);
     opacity: 0.2;
-    position: absolute;
-    left: 710px;
-    bottom: 40px;
+    position: relative;
+    top: 250px;
+    left: 530px;
     width: 52px;
     height: 52px;
   }
 
   &-text-container {
     height: 240px;
-    width: 505.05px;
+    width: 505px;
     font-family: "Merriweather";
     font-style: italic;
     font-weight: 900;
@@ -361,13 +371,15 @@
     line-height: 48px;
     color: #332200;
   }
+
   &-text-mark-second {
     transform: rotate(180deg);
     margin-left: -65px;
   }
+
   &-author {
     position: absolute;
-    bottom: 90px;
+    bottom: 100px;
     left: 80px;
 
     font-family: "Poppins";
@@ -381,12 +393,15 @@
 
 .support {
   &-container {
-    width: 1600px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
     height: 796px;
     background: #121212;
   }
   &-title {
     @include title-white();
+    text-align: center;
     text-transform: lowercase;
     margin: 0px 1103.07px 60px 217.41px;
     padding-top: 60px;
@@ -398,15 +413,17 @@
   }
   &-options {
     display: flex;
+    justify-content: center;
+    margin-right: 200px;
   }
 
   &-silver {
     &-container {
       display: flex;
       height: 396px;
-      width: 561.05px;
+      width: 561px;
       margin-top: 104px;
-      margin-left: 216.41px;
+      margin-left: 216px;
       background-color: $black-color;
     }
 
@@ -431,7 +448,7 @@
       li {
         position: relative;
         padding-left: 20px;
-        margin-bottom: 20px;
+        margin-top: 20px;
         &::before {
           content: "";
           position: absolute;
@@ -475,7 +492,7 @@
     &-prise {
       color: $white-color;
       margin: 20px 32px 0 100px;
-      width: 114.21px;
+      width: 114px;
       height: 48px;
 
       font-family: "Poppins";
@@ -488,9 +505,9 @@
 
   &-gold-container {
     height: 484px;
-    width: 561.05px;
+    width: 561px;
     margin-top: 60px;
-    margin-left: 41.08px;
+    margin-left: 41px;
     background-color: $black-color;
   }
   &-termos {
@@ -514,7 +531,7 @@
     }
     &-title {
       color: $orange-color;
-      margin: 20px 0 0 64.12px;
+      margin: 20px 0 0 64px;
       font-family: "Poppins";
       font-style: normal;
       font-weight: 600;
@@ -558,7 +575,7 @@
       li {
         position: relative;
         padding-left: 20px;
-        margin-bottom: 20px;
+        margin-top: 20px;
         &::before {
           content: "";
           position: absolute;
@@ -573,7 +590,7 @@
       }
     }
     &-prise {
-      width: 121.23px;
+      width: 121px;
       height: 48px;
       font-family: "Poppins";
       font-style: normal;
@@ -590,5 +607,3 @@
     bottom: 30px;
   }
 }
-
-
