change format from js to jsx

--- a/src/pages/Bicicletas/bicicletasPage.scss
+++ b/src/pages/Bicicletas/bicicletasPage.scss
@@ -4,11 +4,12 @@
 .header {
   &-container {
     @include centering();
-    background-color: $black-color;
+    background-color:#121212;
+    ;
     height: 223px;
     width: 100%;
   }
-  &-smal-text {
+  &-small-text {
     font-family: Poppins;
     font-size: 24px;
     font-weight: 500;
