--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,7 +11,9 @@
       height: 492px;
       width: 100%;
       background-color: $black-color;
-      
+      display: flex;
+      flex-direction: column;
+      align-items: center;
      
     }
     &-bikcraft {
@@ -24,7 +26,7 @@
       letter-spacing: 0em;
       text-align: left;
       margin-top: 40px;
-      margin-left: 122px;
+     
     }
     &-info-title {
       font-family: Roboto;
@@ -35,15 +37,16 @@
       text-align: left;
       margin-top: 60px;
       margin-bottom: 32px;
-      margin-left: 300px;
+      margin-left: 40%;
       text-transform: uppercase;
+      width: 450px;
     }
     &-info-ul {
       li {
         list-style-type: none;
         margin-left: -40px;
       }
-      margin-left: 300px;
+      margin-left: 40%;
       color: $light-gray-color;
       font-family: Roboto;
       font-size: 18px;
@@ -60,7 +63,7 @@
     &-info-icon-container {
       display: flex;
       column-gap: 32px;
-      margin-left: 300px;
+      margin-left: 40%;
     }
   
     &-link {
@@ -76,14 +79,14 @@
         line-height: 32px;
         margin-top: 60px;
         margin-bottom: 32px;
-        margin-left: 400px;
+        margin-left: 50%;
         letter-spacing: 0.015em;
         text-transform: uppercase;
       }
       &-list {
         display: flex;
         flex-direction: column;
-        margin-left: 400px;
+        margin-left: 50%;
         
       }
       &-item {
@@ -96,6 +99,7 @@
         text-decoration: none;
         color: $light-gray-color;
         margin-top: 0;
+        width: 200px;
       }
     }
     &-description {
@@ -106,6 +110,6 @@
       letter-spacing: 0.015em;
       text-align: left;
       color: $dark-gray-color;
-      margin: 0 0 50px 200px;
+      margin: 0 0 50px -30%;
     }
   }
