--- a/src/components/Bicicletas-catalog/BicicletasCatalog.scss
+++ b/src/components/Bicicletas-catalog/BicicletasCatalog.scss
@@ -3,19 +3,18 @@
 
 .bike {
   &-container {
-    &-dark {
-      background-color: $dark-color;
-      height: 460px;
+    height: 460px;
       width: 70%;
       margin-top: 60px;
       position: relative;
+    &--dark {
+      background-color: $dark-color;
+      
       color: $white-color;
     }
-    &-light {
+    &--light {
       background-color: $white-color;
-      height: 460px;
-      width: 70%;
-      margin-top: 60px;
+    
       position: relative;
     }
   }
