--- a/src/pages/Bicicletas/bicicletasPage.scss
+++ b/src/pages/Bicicletas/bicicletasPage.scss
@@ -37,6 +37,6 @@
 .bicicletas-catalog-container{
 display: flex;
 flex-direction: column;
-align-items: end;
+align-items: flex-end;
 margin-top: 60px;
 }
