--- a/src/pages/Bicicleta-interna/Bicicleta-internaPage.scss
+++ b/src/pages/Bicicleta-interna/Bicicleta-internaPage.scss
@@ -1,35 +1,63 @@
 @import "../../components/styles/variables.scss";
 @import "../../components/styles/mixins.scss";
 
+.Bicicleta-interna-page-container {
+  width: 100%;
+}
 .header {
-    &-container {
-      @include centering();
-      background-color:$dark-color;
-      ;
-      height: 223px;
-      width: 100%;
-    }
-    &-small-text {
-      font-family: Poppins;
-      font-size: 24px;
-      font-weight: 500;
-      line-height: 23px;
-   
-      text-align: left;
-      color: $light-gray-color;
-  
-      margin-left: 8%;
-      padding-top: 60px;
-    }
-    &-title {
-      @include title-white();
-      color: $white-color;
-      margin:8px 0 0 8%;
-  
-      &::after {
-        content: ".";
-        color: $orange-color;
-      }
-  
+  &-container {
+    @include centering();
+    background-color: $dark-color;
+    height: 223px;
+    width: 100%;
+  }
+  &-small-text {
+    font-family: Poppins;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 23px;
+
+    text-align: left;
+    color: $light-gray-color;
+
+    margin-left: 8%;
+    padding-top: 60px;
+  }
+  &-title {
+    @include title-white();
+    color: $white-color;
+    margin: 8px 0 0 8%;
+
+    &::after {
+      content: ".";
+      color: $orange-color;
     }
   }
+}
+
+.bicicleta-choice {
+  &-container {
+   
+  
+  }
+  &-title {
+    color: black;
+    margin-top: 100px;
+    margin-left: 10%;
+    width: 100%;
+    background-color: $white-color;
+
+    font-family: Poppins;
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 72px;
+    letter-spacing: 0em;
+    text-align: left;
+
+    text-transform: lowercase;
+    &:after {
+      content: ".";
+      color: $orange-color;
+    }
+  }
+}
