--- a/src/pages/Bicicleta-interna/Bicicleta-internaPage.scss
+++ b/src/pages/Bicicleta-interna/Bicicleta-internaPage.scss
@@ -37,14 +37,12 @@
 
 .bicicleta-choice {
   &-container {
-   
-  
   }
   &-title {
     color: black;
     margin-top: 100px;
     margin-left: 10%;
-    width: 100%;
+
     background-color: $white-color;
 
     font-family: Poppins;
@@ -59,5 +57,95 @@
       content: ".";
       color: $orange-color;
     }
+  }
+}
+
+.seguros {
+  &-container {
+    background-color: $dark-color;
+    display: flex;
+    height: 516px;
+    justify-content: center;
+    margin-top: 222px;
+  }
+  &-img {
+    &-box {
+      position: relative;
+      top: -120px;
+      margin-left: 10%;
+      max-width: 756px;
+      width: 100%;
+    }
+  }
+  &-content {
+    &-box {
+      max-width: 537px;
+      margin-top: 60px;
+    }
+    &-title {
+      font-family: Poppins;
+      font-size: 64px;
+      font-weight: 600;
+      line-height: 72px;
+      letter-spacing: 0em;
+      text-align: left;
+      color: $white-color;
+      &::after {
+        content: " seguro.";
+        color: $orange-color;
+      }
+    }
+    &-description {
+      font-family: Roboto;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 36px;
+      letter-spacing: 0em;
+      text-align: left;
+      color: $light-gray-color;
+
+      margin-top: 32px;
+    }
+    &-btn {
+      text-decoration: none;
+      font-family: Poppins;
+      background-color: $orange-color;
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 24px;
+      letter-spacing: 0em;
+      text-align: left;
+
+      height: 56px;
+      width: 204px;
+      border-radius: 5px;
+      padding: 16px 32px 16px 32px;
+      margin-top: 20px;
+      display: flex;
+    }
+  }
+  &-dec {
+    height: 52px;
+    padding: 45px;
+    &:first-of-type {
+      transform: rotate(180deg);
+    }
+    &:last-of-type {
+      transform: rotate(270deg);
+    }
+    &-box {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: space-between;
+    }
+  }
+  &-blak-space {
+    height: 120px;
+    background-color: black;
   }
 }
