--- a/src/pages/Bicicleta-interna/Bicicleta-internaPage.scss
+++ b/src/pages/Bicicleta-interna/Bicicleta-internaPage.scss
@@ -1,17 +1,18 @@
 @import "../../components/styles/variables.scss";
 @import "../../components/styles/mixins.scss";
 
-.Bicicleta-interna-page-container {
-  width: 100%;
+.Bicicleta-interna-page-container{
+    width: 100%;
+ 
 }
 .header {
-  &-container {
+  &-interna-container {
     @include centering();
     background-color: $dark-color;
     height: 223px;
     width: 100%;
   }
-  &-small-text {
+  &-interna-small-text {
     font-family: Poppins;
     font-size: 24px;
     font-weight: 500;
@@ -19,15 +20,15 @@
 
     text-align: left;
     color: $light-gray-color;
-
+    
     margin-left: 8%;
     padding-top: 60px;
   }
-  &-title {
+  &-interna-title {
     @include title-white();
     color: $white-color;
     margin: 8px 0 0 8%;
-
+    
     &::after {
       content: ".";
       color: $orange-color;
