--- a/src/pages/Home/homePage.scss
+++ b/src/pages/Home/homePage.scss
@@ -422,6 +422,9 @@
     display: flex;
     justify-content: center;
     margin-right: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   &-dec {
     transform: rotate(90deg) scaleX(-1);
