--- a/src/pages/Seguros/segurosPage.scss
+++ b/src/pages/Seguros/segurosPage.scss
@@ -41,4 +41,80 @@
     align-items: center;
     padding-top: 120px;
   }
+  &-advantages {
+    &-container {
+      margin-top: 60px;
+      background-color: black;
+    }
+    &-title {
+      @include title-white;
+      color: white;
+      margin-top: 120px;
+      margin-left: 25%;
+      &::after {
+        content: ".";
+        color: $orange-color;
+      }
+    }
+    &-margins-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-top: 40px;
+    }
+    &-items-container {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-gap: 20px;
+      width: 80%;
+    }
+    &-item {
+      &-title {
+        font-family: Poppins;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 32px;
+        letter-spacing: 0em;
+        text-align: left;
+
+        color: white;
+        margin-top: 8px;
+      }
+      &-description {
+        font-family: Roboto;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+
+        color: $light-gray-color;
+        margin-top: 8px;
+      }
+    }
+  }
+  &-FAQ {
+    &-container{
+      display: flex;
+      justify-content: center;
+      background-color: white;
+      margin-top: 80px;
+      padding-top: 120px;
+    }
+    &-box{
+      width: 80%;
+    }
+    &-title {
+      @include title-black;
+      &::after {
+        content: ".";
+        color: $orange-color;
+      }
+    }
+    &-dropdown{
+      margin-top: 90px;
+      padding-bottom: 100px;
+    }
+  }
 }
